--- a/css/styles.css
+++ b/css/styles.css
@@ -558,7 +558,125 @@ img {
   height: 224px;
 }
 
+.events__section {
+  padding-top: 98px;
+  padding-bottom: 108px;
+}
 
+.events__title {
+  margin: 0;
+  margin-bottom: 25px;
+  font-weight: bold;
+  font-size: 37px;
+  line-height: 54px;
+  color: #373737;
+  text-align: center;
+}
+
+.events__text {
+  width: 950px;
+  margin: 0;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 100px;
+  text-align: center;
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 38px;
+  color: #7D7D7D;
+}
+
+.events {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 0;
+  margin-bottom: 81px;
+  padding: 0;
+  list-style-type: none;
+}
+
+.event {
+  max-width: 540px;
+  padding: 31px 28px;
+  box-shadow: 0px 0px 77px rgba(0, 0, 0, 0.06);
+  border-radius: 15px;
+}
+
+.event__top {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row-reverse;
+  justify-content: flex-end;
+  margin-bottom: 28px;
+}
+
+.event__title {
+  width: 350px;
+  margin: 0;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 37px;
+  color: #37474F;
+}
+
+.event__date {
+  display: flex;
+  flex-direction: column;
+  margin-right: 19px;
+  padding: 11px 22px;
+  border-radius: 11px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 27px;
+  line-height: 32px;
+  background-color: rgba(113, 124, 255, 0.14);
+  color: #717CFF;
+}
+
+.event__date--month {
+  padding: 0;
+  font-weight: 900;
+  font-size: 16px;
+  line-height: 21px;
+}
+
+.event__text {
+  margin: 0;
+  margin-bottom: 26px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 28px;
+  letter-spacing: 0.444444px;
+  color: rgba(55, 71, 79, 0.721569);
+}
+
+.event__footer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.event__time {
+  display: inline-flex;
+  align-items: center;
+  margin: 0;
+  font-weight: 900;
+  font-size: 16px;
+  line-height: 28px;
+  letter-spacing: 0.444444px;
+  color: #373737;
+}
+
+.event__time::before {
+  content: "";
+  width: 24px;
+  height: 24px;
+  background-image: url("../img/time-icon.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+}
 
 
 
@@ -600,6 +718,10 @@ only screen and (                min-resolution: 2dppx) {
 
   .news-time::before {
     background-image: url("../img/calendar-icon@2x.png");
+  }
+
+  .event__time::before {
+    background-image: url("../img/time-icon@2x.png");
   }
 
 }
